test/tests/compiler/18_structures/invalid_parse/extra_credit/plx1_union_member_any_2.plx
type union u1(x: i32, y: any)

pub fn main(none) i32 {
    return 0
}
